fix category wrap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,7 +67,7 @@ td {
     display: inline;
 }
 
-@media screen and (max-width: 850px) {
+@media screen and (max-width: 875px) {
     .title p {
         display: block;
     }
